--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Simulated Annealing</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./notebooks/vdc.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Generate vector data cube</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
